--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,17 +15,12 @@ variables:
 steps:
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
+- task: CopyFiles@2
+  inputs:
+    SourceFolder: '$(System.ArtifactStagingDirectory)'
+    Contents: '**'
+    TargetFolder: '$(Build.ArtifactStagingDirectory)'
 - task: PublishBuildArtifacts@1
   inputs:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-    ArtifactName: 'drop'    
-    - task: CopyFiles@2
-      inputs:
-        SourceFolder: '$(System.ArtifactStagingDirectory)'''
-        Contents: '**'
-        TargetFolder: '$(Build.ArtifactStagingDirectory)'''
-        - task: PublishBuildArtifacts@1
-          inputs:
-            PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-            ArtifactName: 'drop'
-            publishLocation: 'Container'
+    ArtifactName: 'drop'
